# BaseFPGA

./: .gitignore  LICENSE  README.md
BaseFPGA/: Avalon_bus_RW_Test.v  CacheTestbench.v  DDR3_RTL.qsf  DDR3_RTL.sld  DDR3_RTL.v  pll.qip  pll.v  pll_reconfig.v  qar_info.json  soc_system.sopcinfo  sys_pll.v
DDR3_RTL/: Avalon_bus_RW_Test.v  CacheTestbed.v  CacheTestbench.v  DDR3_RTL - Copy.qsf  DDR3_RTL.cdf  DDR3_RTL.qsf  DDR3_RTL.sld  DDR3_RTL.v  DE10_Nano_golden_top.cdf  ReadOnlyCache.v  cache.v  pll.bsf  pll.v  pll_reconfig.bsf  pll_reconfig.qip  pll_reconfig.sip  pll_reconfig.v  qmegawiz_errors_log.txt  sys_pll.bsf  sys_pll.qip  sys_pll.sip  sys_pll.v
DDR3_RTL/.qsys_edit/: preferences.xml  soc_system_schematic.nlv
DDR3_RTL/soc_system/: soc_system.csv  soc_system.xml
HDMI_TX/: DE10_Nano_HDMI_TX.cdf  DE10_Nano_HDMI_TX.qsf  DE10_Nano_HDMI_TX_assignment_defaults.qdf
HDMI_TX/output_files/: DE10_Nano_HDMI_TX.cdf
HDMI_TX/pll/: pll.bsf  pll.qip  pll.sip  pll.spd  pll.v  pll_reconfig.bsf  pll_reconfig.qip  pll_reconfig.sip  sys_pll.qip
USB_Bridge/FPGA/: DE10_Nano_golden_top.cdf  DE10_Nano_golden_top.qsf  DE10_Nano_golden_top_assignment_defaults.qdf  Waveform.vwf  de10_nano_golden_top.v  qar_info.json  serv_req_info.txt  testbed.vwf  testbed2.vwf  (+8 more)
USB_Bridge/PC/libftdi1-1.5/libusb-1.0.23/: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
USB_Bridge/PC/libftdi1-1.5/libusb-1.0.23/doc/: Makefile.in  doxygen.cfg.in
USB_Bridge/PC/libftdi1-1.5/libusb-1.0.23/libusb/: Makefile.in
USB_Bridge/PC/libftdi1-1.5/libusb-1.0.23/tests/: Makefile.in
(+16 files in other folders)
